...
        {/* Top */}
        <View style={styles.top}>
          <View style={styles.badge}>
            <Text style={styles.badgeEmoji}>{'\uD83C\uDFD3'}</Text>
            <Text style={styles.badgeText}>Mese Tenis Rom&#226;nia</Text>
          </View>
          <Text style={styles.title}>TT PORTAL</Text>
          <Text style={styles.subtitle}>
            G&#259;se&#537;te o mas&#259; de tenis{'\n'}&#238;n Rom&#226;nia
          </Text>
        </View>

        {/* Middle */}
...
